# courswork_project_2

./: README.md  pyproject.toml
data/: vacancies.json
src/: hh_api.py  json_file.py  main_utils.py  utils.py  vacancies.py
tests/: test_main.py  test_vac.py
